# tol-revolve

./: run-experiments-supg.sh  run-experiments.sh  start.py
cpp/tol/plugin/: FakeLightSensor.cpp  FakeLightSensor.h  RobotController.cpp  RobotController.h
cpp/tol/plugin/brain/: BodyParser.cpp  Helper.cpp  Helper.h  SUPGBrainPhototaxis.cpp  SUPGBrainPhototaxis.h
cpp/tol/plugin/test/: CMakeLists.txt
res/: hyperneat_supg_phototaxis.cfg  hyperneat_supg_phototaxis_replay.cfg
res/worlds/: gait-learning-realtime.world  gait-learning.world
